# insurance_claim_catboost_regression

./: pyproject.toml
code/: modeling.ipynb
code/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
code/catboost_info/learn/: events.out.tfevents
