[tool.poetry]
name = "python-project-2024"
version = "0.1.0"
description = ""
authors = ["Sasha Gryshchenko <gryshchenkosasha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"
numpy = "^1.23.0"
pandas = "^2.2.2"
catboost = "^1.2.5"
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
